--- a/src/carousel.css
+++ b/src/carousel.css
@@ -1,8 +1,6 @@
-.carousel-img {
-    height: 25%;
-}
-
-.carousel-container {
-    height: 93%;
-    width: 93%;
+.carousel-image {
+    width: 100%;
+    height: 100%;
+    max-height: 640px;
+    max-width: 1140px;
 }
