--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,12 @@
   text-align: center;
 }
 
+.pageContainer {
+  min-height: 91.9vh!important;
+  position: relative!important;
+}
+
 html {
-  min-height: 100%;
   box-sizing: border-box;
 }
 
@@ -16,8 +20,6 @@ html {
 body {
   position: relative;
   margin: 0;
-  min-height: 100%;
-  
 }
 
 
